--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -15,10 +15,29 @@
             <div class="col-sm-2">
                 {% block sidebar %}
                     <ul class="sidebar-nav">
-                        <li><a href="{% url 'index' %}">Home</a></li>
-                        <li><a href="{% url 'books' %}">All books</a></li>
-                        <li><a href="{% url 'authors' %}">All authors</a></li>
+                        <a href="{% url 'index' %}">Home</a><br/>
+                        <a href="{% url 'books' %}">All books</a><br/>
+                        <a href="{% url 'authors' %}">All authors</a><br/>
+                        <br/><br/>
+                        {% if user.is_authenticated %}
+                            User : {{ user.get_username }}<br/>
+                            <a href="{% url 'my-borrowed' %}">My Borrowed</a><br/>
+                            <a href="{% url 'logout' %}?next={{ request.path }}">Logout</a><br/>
+                        {% else %}
+                            <a href="{% url 'login' %}?next={{ request.path }}">Login</a><br/>
+                        {% endif %}
+                        <br/><br/>
                     </ul>
+
+                    {% if user.is_staff %}
+                        <ul class="sidebar-nav">
+                            <hr/>
+                            Staff<br/>
+                            {% if perms.catalog.can_mark_returned %}
+                                <a href="{% url 'all-borrowed' %}">All Borrowed<a/><br/>
+                            {% endif %}
+                        </ul>
+                    {% endif %}
                 {% endblock %}
             </div>
             <div class="col-sm-10 ">
