--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -8,6 +8,10 @@
     <!-- Add additional CSS in static file -->
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+
+    <!-- video.js -->
+    <link href="https://unpkg.com/video.js/dist/video-js.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/video.js/dist/video.min.js"></script>
 </head>
 <body>
     <div class="container-fluid">
