--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -16,5 +16,12 @@
       <li><strong>Authors:</strong> {{ num_authors }}</li>
   </ul>
 
+    <!-- video.js -->
+    <video id="my-player" class="video-js" controls preload="auto" poster="//vjs.zencdn.net/v/oceans.png" data-setup='{}'>
+        <source src="//vjs.zencdn.net/v/oceans.mp4" type="video/mp4"></source>
+        <source src="//vjs.zencdn.net/v/oceans.webm" type="video/webm"></source>
+        <source src="//vjs.zencdn.net/v/oceans.ogv" type="video/ogg"></source>
+    </video>
+
     <p>You have visited this page {{ num_visits }}{% if num_visits == 1 %} time {% else %} times {% endif %}.</p>
 {% endblock %}
