--- a/catalog/templates/catalog/author_list.html
+++ b/catalog/templates/catalog/author_list.html
@@ -2,11 +2,14 @@
 
 {% block content %}
   <h1>Author List</h1>
+  {% if perms.catalog.can_mark_returned %}<a href="{% url 'author_create' %}"> [Create] </a> {% endif %}
   {% if author_list %}
   <ul>
     {% for author in author_list %}
       <li>
         <a href="{{ author.get_absolute_url }}">{{ author.last_name}} {{ author.first_name }} ({{ author.date_of_birth }} - )</a>
+          {% if perms.catalog.can_mark_returned %} / <a href="{% url 'author_update' author.id %}" style="color:green" /> [Update] </a> {% endif %}
+          {% if perms.catalog.can_mark_returned %} / <a href="{% url 'author_delete' author.id %}" style="color:red"/> [Delete] </a> {% endif %}
       </li>
     {% endfor %}
   </ul>
