--- a/catalog/templates/catalog/book_list.html
+++ b/catalog/templates/catalog/book_list.html
@@ -2,11 +2,14 @@
 
 {% block content %}
   <h1>Book List</h1>
+  {% if perms.catalog.can_mark_returned %}<a href="{% url 'book_create' %}"> [Create] </a> {% endif %}
   {% if book_list %}
   <ul>
     {% for book in book_list %}
       <li>
         <a href="{{ book.get_absolute_url }}">{{ book.title }}</a>
+          {% if perms.catalog.can_mark_returned %} / <a href="{% url 'book_update' book.id %}" style="color:green" /> [Update] </a> {% endif %}
+          {% if perms.catalog.can_mark_returned %} / <a href="{% url 'book_delete' book.id %}" style="color:red"/> [Delete] </a> {% endif %}
       </li>
     {% endfor %}
   </ul>
